--- a/templates/commentIcons.html
+++ b/templates/commentIcons.html
@@ -1,4 +1,4 @@
 <script id="commentIconTemplate" type="text/html">
-    <div id="icon-${commentId}" class="comment-icon inactive" data-commentid="${commentId}">
+    <div class="comment-icon inactive icon-${commentId}" data-commentid="${commentId}">
     </div>
 </script>
