Fix broken tests
This commit reverts one change of the previous commit. Now we have again the id
field in the commentIconTemplate. As we adopt a different behavior, the test of
move a comment to another line had to be fixed as well.

--- a/templates/commentIcons.html
+++ b/templates/commentIcons.html
@@ -1,4 +1,4 @@
 <script id="commentIconTemplate" type="text/html">
-    <div class="comment-icon inactive icon-${commentId}" data-commentid="${commentId}">
+    <div id="icon-${commentId}" class="comment-icon inactive icon-${commentId}" data-commentid="${commentId}">
     </div>
 </script>
